--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
     <header>
         <!--Sidhuvud och navigation-->
         <h1> Min hemsida</h1>
-        <a href="index.html">Startsida</a>
+        <a class="active" href="index.html">Startsida</a>
         <a href="about.html">Om mig</a>
         <a href="hobbys.html">Mina hobbys</a>
-        <a href="contact.html">Kontakt</a>
+        <a class="active" href="contact.html">Kontakt</a>
     </header>
  <main> 
         <!--Huvud innehåll på sidan-->
