--- a/hobbys.html
+++ b/hobbys.html
@@ -6,22 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min andra hemsida</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!--Kroppen på min sida-->
     <header>
         <!--Sidhuvud och navigation-->
         <h1> Min hemsida</h1>
+        <nav>
         <a href="index.html">Startsida</a>
         <a href="about.html">Om mig</a>
         <a href="hobbys.html">Mina hobbys</a>
-        <a href="contact.html">Kontakt</a>
+        <a class="active"href="contact.html">Kontakt</a>
+    </nav>
     </header>
  <main> 
-        <!--Huvud innehåll på sidan-->
+        <!--Huvudinnehåll på sidan-->
+        <h1>Mina hobbys</h1>
         <p id="my-id">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur saepe, odit nobis minus dicta omnis nihil? Voluptatum animi explicabo pariatur, magnam quo adipisci cum eveniet totam dignissimos tempore. Alias, sit.</p>
-        <p class="my-class"></p>
+        <p class="my-class">lorem</p>
         <p class="two class"></p>
+        <img src="kakor.jpg" alt="kakor">
+
     </main>
     <footer>
         <!--Sidfot, copyright och annat-->
