--- a/about.html
+++ b/about.html
@@ -6,22 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min andra hemsida</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!--Kroppen på min sida-->
     <header>
         <!--Sidhuvud och navigation-->
         <h1> Min hemsida</h1>
+        <nav>
         <a href="index.html">Startsida</a>
         <a href="about.html">Om mig</a>
         <a href="hobbys.html">Mina hobbys</a>
         <a href="contact.html">Kontakt</a>
+    </nav>
     </header>
  <main> 
         <!--Huvud innehåll på sidan-->
+        <h1>Om mig</h1>
         <p id="my-id">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur saepe, odit nobis minus dicta omnis nihil? Voluptatum animi explicabo pariatur, magnam quo adipisci cum eveniet totam dignissimos tempore. Alias, sit.</p>
-        <p class="my-class"></p>
-        <p class="two class"></p>
+        <p class="my-class">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt dolorum magni earum, commodi sit odio dolores suscipit. Architecto reprehenderit, facere blanditiis eum molestias, asperiores quod, eligendi dolore unde rem veniam.</p>
+        <p class="two class">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolorem sequi error similique repellendus repellat enim consectetur? Saepe possimus ab deserunt quaerat labore, quibusdam tempore aut, voluptatibus dolorem consectetur cum!</p>
     </main>
     <footer>
         <!--Sidfot, copyright och annat-->
