--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min andra hemsida</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!--Kroppen på min sida-->
     <header>
         <!--Sidhuvud och navigation-->
         <h1> Min hemsida</h1>
-        <a href="index.html">Startsida</a>
+        <nav>
+        <a class="active" href="index.html">Startsida</a>
         <a href="about.html">Om mig</a>
         <a href="hobbys.html">Mina hobbys</a>
         <a href="contact.html">Kontakt</a>
+    </nav>
     </header>
  <main> 
         <!--Huvud innehåll på sidan-->
+        <h1>Vällkomen</h1>
         <p id="my-id">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur saepe, odit nobis minus dicta omnis nihil? Voluptatum animi explicabo pariatur, magnam quo adipisci cum eveniet totam dignissimos tempore. Alias, sit.</p>
-        <p class="my-class"></p>
-        <p class="two class"></p>
+        <p class="my-class">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error deleniti aspernatur quos maxime, eveniet nobis id delectus esse aliquam sequi expedita in velit ducimus provident inventore illo culpa laboriosam? Excepturi!</p>
+        <p class="two class">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, perspiciatis quo. Libero officiis doloremque, sapiente cum quo accusamus cupiditate tempora consectetur quas facilis, minima, quis ab excepturi quos expedita suscipit.</p>
     </main>
     <footer>
         <!--Sidfot, copyright och annat-->
