--- a/hobbys.html
+++ b/hobbys.html
@@ -24,14 +24,14 @@
         <!--Huvudinnehåll på sidan-->
         <h1>Mina hobbys</h1>
         <p id="my-id">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur saepe, odit nobis minus dicta omnis nihil? Voluptatum animi explicabo pariatur, magnam quo adipisci cum eveniet totam dignissimos tempore. Alias, sit.</p>
-        <p class="my-class">lorem</p>
-        <p class="two class"></p>
+        <p class="my-class">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quod totam eum fugit deleniti. Dicta veniam, amet quae quod in fuga placeat alias architecto recusandae sed nihil deserunt necessitatibus ipsam!</p>
+        <p class="two class">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus nesciunt adipisci ad harum? Sed praesentium ipsam vitae officia aspernatur incidunt et qui reprehenderit ratione, tempora sit! At, adipisci sequi.</p>
         <img src="kakor.jpg" alt="kakor">
 
     </main>
     <footer>
         <!--Sidfot, copyright och annat-->
-        <p>&copy; 2023 Min Hemsida, Milica</p>
+        <p>&copy; 2023 Min Hemsida, Milica Petrovic</p>
 
     </footer>
     
