--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
  <main> 
         <!--Huvud innehåll på sidan-->
-        <h1>Vällkomen</h1>
+        <h1>Välkommen</h1>
         <p id="my-id">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur saepe, odit nobis minus dicta omnis nihil? Voluptatum animi explicabo pariatur, magnam quo adipisci cum eveniet totam dignissimos tempore. Alias, sit.</p>
         <p class="my-class">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error deleniti aspernatur quos maxime, eveniet nobis id delectus esse aliquam sequi expedita in velit ducimus provident inventore illo culpa laboriosam? Excepturi!</p>
         <p class="two class">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, perspiciatis quo. Libero officiis doloremque, sapiente cum quo accusamus cupiditate tempora consectetur quas facilis, minima, quis ab excepturi quos expedita suscipit.</p>
